syntax = "proto3";

package malonaz.core.authentication.v1;

option go_package = "github.com/malonaz/core/genproto/authentication";

message Configuration {
  repeated Role roles = 1;
}

message Role {
  // Name of the role.
  string id = 1;
  // Permissions for thisrole.
  repeated string permissions = 2;
  // Optional: role hierarchy
  repeated string inherited_role_ids = 3;
  // Optional: context/scope (e.g., organization-specific roles)
  string scope = 4;
}

message Session {
  // Id of this session.
  string id = 1;
  // Time at which this session was created.
  int64 create_timestamp = 2;
  // Time at which this sessione expires.
  int64 expire_timestamp = 3;
  // The user id of this user.
  string user_id = 4;
  // The organization id.
  string organization_id = 5;
  // Roles this session has.
  repeated string role_ids = 6;
  // Metadata and others.
  SessionMetadata metadata = 7;
}

message SessionMetadata {
  // Ip address of the client.
  string ip_address = 1;
  // Version of the client caller.
  ClientVersion client_version = 2;
  // User agent.
  string user_agent = 3;
  // Extra data.
  map<string, string> key_to_value = 4;
}

message ClientVersion {
  int32 major = 1;
  int32 minor = 2;
  int32 patch = 3;
}
